--- a/ThermoFluids/templates/documentation/html/FreeConvection.html
+++ b/ThermoFluids/templates/documentation/html/FreeConvection.html
@@ -528,8 +528,8 @@ Nu=C\cdot Ra^{0.33}\cdot Pr^{0.074}
 <p>where <span class="math">\(C\)</span> is determined from <span class="math">\(\alpha\)</span> based on the following values:</p>
 <table border="1" class="nice-table docutils">
 <colgroup>
-<col width="40%" />
-<col width="60%" />
+<col width="42%" />
+<col width="58%" />
 </colgroup>
 <thead valign="bottom">
 <tr><th class="head"><span class="math">\(\alpha\)</span></th>
@@ -537,19 +537,19 @@ Nu=C\cdot Ra^{0.33}\cdot Pr^{0.074}
 </tr>
 </thead>
 <tbody valign="top">
-<tr><td><span class="math">\(0\circ\)</span></td>
+<tr><td><span class="math">\(0^\circ\)</span></td>
 <td><span class="math">\(4.9\cdot10^{-2}\)</span></td>
 </tr>
-<tr><td><span class="math">\(30\circ\)</span></td>
+<tr><td><span class="math">\(30^\circ\)</span></td>
 <td><span class="math">\(5.7\cdot10^{-2}\)</span></td>
 </tr>
-<tr><td><span class="math">\(45\circ\)</span></td>
+<tr><td><span class="math">\(45^\circ\)</span></td>
 <td><span class="math">\(5.9\cdot10^{-2}\)</span></td>
 </tr>
-<tr><td><span class="math">\(60\circ\)</span></td>
+<tr><td><span class="math">\(60^\circ\)</span></td>
 <td><span class="math">\(6.5\cdot10^{-2}\)</span></td>
 </tr>
-<tr><td><span class="math">\(90\circ\)</span></td>
+<tr><td><span class="math">\(90^\circ\)</span></td>
 <td><span class="math">\(6.9\cdot10^{-2}\)</span></td>
 </tr>
 </tbody>
