--- a/ThermoFluids/templates/documentation/html/FreeConvection.html
+++ b/ThermoFluids/templates/documentation/html/FreeConvection.html
@@ -582,8 +582,8 @@ Nu=1+\frac{0.025\cdot Ra^{1.36}}{Ra+1.3\cdot10^{4}}
 <h2>3.3.&nbsp;&nbsp;&nbsp;Horizontal planes</h2>
 <table border="1" class="nice-table docutils">
 <colgroup>
-<col width="16%" />
-<col width="84%" />
+<col width="38%" />
+<col width="63%" />
 </colgroup>
 <thead valign="bottom">
 <tr><th class="head">Parameter</th>
@@ -599,9 +599,6 @@ Nu=1+\frac{0.025\cdot Ra^{1.36}}{Ra+1.3\cdot10^{4}}
 </tr>
 <tr><td><span class="math">\(d\)</span></td>
 <td>distance between planes</td>
-</tr>
-<tr><td><span class="math">\(\alpha\)</span></td>
-<td>inclination angle (<span class="math">\(\alpha = 0\)</span> vertical, <span class="math">\(\alpha = 90^\circ\)</span> horizontal)</td>
 </tr>
 <tr><td><span class="math">\(s = d\)</span></td>
 <td>characteristic length</td>
@@ -645,6 +642,53 @@ Ra&lt;Ra_{c}\left(Ra_{c}=1708\right)
 \end{equation*}
 </div>
 <p>no convection occurs. Heat exchange is purely by conduction.</p>
+</div>
+<div class="section" id="horizontal-annuli">
+<h2>3.4.&nbsp;&nbsp;&nbsp;Horizontal annuli</h2>
+<table border="1" class="nice-table docutils">
+<colgroup>
+<col width="52%" />
+<col width="48%" />
+</colgroup>
+<thead valign="bottom">
+<tr><th class="head">Parameter</th>
+<th class="head">Description</th>
+</tr>
+</thead>
+<tbody valign="top">
+<tr><td><span class="math">\(l\)</span></td>
+<td>length</td>
+</tr>
+<tr><td><span class="math">\(r_{i}\)</span></td>
+<td>inner radius</td>
+</tr>
+<tr><td><span class="math">\(r_{o}\)</span></td>
+<td>outer radius</td>
+</tr>
+<tr><td><span class="math">\(s = r_{o}-r_{i}\)</span></td>
+<td>characteristic length</td>
+</tr>
+</tbody>
+</table>
+<p>For</p>
+<div class="math">
+\begin{equation*}
+Ra&gt;7.1\cdot10^{3}
+\end{equation*}
+</div>
+<p>if</p>
+<div class="math">
+\begin{equation*}
+\frac{r_{o}}{r_{i}}\leqq8
+\end{equation*}
+</div>
+<p>and if heat is transmitted outwards, the Nusselt correlation is:</p>
+<div class="math">
+\begin{equation*}
+Nu=0.2\cdot Ra^{0.25}\cdot\left(\frac{r_{o}}{r_{i}}\right)^{0.5}
+\end{equation*}
+</div>
+<p>In the other cases, the Nusselt correlation is unknown.</p>
 </div>
 </div>
 <div class="section" id="references">
