--- a/ThermoFluids/templates/ThermoFluids/FluidPropsCalculator.html
+++ b/ThermoFluids/templates/ThermoFluids/FluidPropsCalculator.html
@@ -12,7 +12,7 @@ angular.module('FluidPropsCalculator', ['ui.bootstrap', 'smo'])
 	    $httpProvider.defaults.xsrfHeaderName = 'X-CSRFToken';
 	}])
 	.controller('FluidPropsController', [ '$scope', '$http', function($scope, $http) {
-
+		$scope.angular = angular;
 		$scope.inputs = [{autoFetch: true, dataUrl: '/ThermoFluids/FluidPropsCalculator/', action: 'getInputs'}];
 		$scope.outputs = [{ dataUrl: '/ThermoFluids/FluidPropsCalculator/', action: 'compute'}];
 		
@@ -45,11 +45,12 @@ angular.module('FluidPropsCalculator', ['ui.bootstrap', 'smo'])
 			$('#FP' + String($scope.inputs.length) + 'Tab').tab('show');
 		}
 		
+		// Fluids info
+		$scope.fluidInfo = {}
 		$scope.fetchFluidInfo = function() {
-			$scope.fluids = {};
-			$scope.fluids.obtained = false;
-			$scope.fluids.loading = true;
-			$scope.fluids.errorLoading = false;
+			$scope.fluidInfo.obtained = false;
+			$scope.fluidInfo.loading = true;
+			$scope.fluidInfo.errorLoading = false;
 			$http({
 		        method  : 'POST',
 		        url     : '/ThermoFluids/FluidPropsCalculator/',
@@ -57,17 +58,64 @@ angular.module('FluidPropsCalculator', ['ui.bootstrap', 'smo'])
 		        headers : { 'Content-Type': 'application/x-www-form-urlencoded' }, // set the headers so angular passing info as form data (not request payload)
 		    })
 		    .success(function(data) {
-		    	$scope.fluids.loading = false;
-		    	$scope.fluids.obtained = true;
-				$scope.fluidList = data;
-		    	$scope.selectedFluid = data[0];
+		    	$scope.fluidInfo.loading = false;
+		    	$scope.fluidInfo.obtained = true;
+				$scope.fluidInfo.data = data;
+		    	$scope.fluidInfo.selectedFluid = data[0];
 		    })
 		    .error(function(data) {
-		    	$scope.fluids.loading = false;
-		    	$scope.fluids.errorLoading = true;
+		    	$scope.fluidInfo.loading = false;
+		    	$scope.fluidInfo.errorLoading = true;
 		    });
 		}
 		$scope.fetchFluidInfo();
+		
+		// Saturation properties
+		$scope.saturation = {fluidList : {}, saturationData : {}}		
+		$scope.fetchFluidList = function() {
+			$scope.saturation.fluidList.obtained = false;
+			$scope.saturation.fluidList.loading = true;
+			$scope.saturation.fluidList.errorLoading = false;
+			$http({
+		        method  : 'POST',
+		        url     : '/ThermoFluids/FluidPropsCalculator/',
+		        data    : {action : 'getFluidList', parameters: {}},
+		        headers : { 'Content-Type': 'application/x-www-form-urlencoded' }, // set the headers so angular passing info as form data (not request payload)
+		    })
+		    .success(function(data) {
+		    	$scope.saturation.fluidList.loading = false;
+		    	$scope.saturation.fluidList.obtained = true;
+				$scope.saturation.fluidList.data = data;
+		    	$scope.saturation.selectedFluid = data[0][0];
+		    })
+		    .error(function(data) {
+		    	$scope.saturation.fluidList.loading = false;
+		    	$scope.saturation.fluidList.errorLoading = true;
+		    });
+		}		
+		$scope.fetchFluidList();
+		
+		$scope.fetchSaturationData = function() {
+			$scope.saturation.saturationData.obtained = false;
+			$scope.saturation.saturationData.loading = true;
+			$scope.saturation.saturationData.errorLoading = false;
+			$http({
+		        method  : 'POST',
+		        url     : '/ThermoFluids/FluidPropsCalculator/',
+		        data    : {action : 'getSaturationData', parameters: {fluidName : $scope.saturation.selectedFluid}},
+		        headers : { 'Content-Type': 'application/x-www-form-urlencoded' }, // set the headers so angular passing info as form data (not request payload)
+		    })
+		    .success(function(data) {
+		    	$scope.saturation.saturationData.loading = false;
+		    	$scope.saturation.saturationData.obtained = true;
+				$scope.saturation.saturationData.data = data;
+		    })
+		    .error(function(data) {
+		    	$scope.saturation.saturationData.loading = false;
+		    	$scope.saturation.saturationData.errorLoading = true;
+		    });
+		}
+		
 }])
 </script>
 {% endblock %}
@@ -76,6 +124,7 @@ angular.module('FluidPropsCalculator', ['ui.bootstrap', 'smo'])
 {% block pills %}
 	<li class="active" role="presentation"><a id="calcTab" data-target="#calculator" role="tab" data-toggle="tab">Calculator</a></li>
 	<li role="presentation"> <a id="fluidsTab" data-target="#fluids" role="tab" data-toggle="tab">Fluid info</a></li>
+	<li role="presentation"> <a id="saturationTab" data-target="#saturation" role="tab" data-toggle="tab">Saturation</a></li>
 	<li role="presentation"> <a id="docTab" data-target="#doc" role="tab" data-toggle="tab">Doc</a></li>
 {% endblock %}
 
@@ -120,26 +169,25 @@ angular.module('FluidPropsCalculator', ['ui.bootstrap', 'smo'])
 		<div class="tab-pane page-container" id="fluids">
 {% verbatim %}	
 			<h1 class="title">Fluid information</h1>
-			<div ng-if="fluids.loading"><h2 class="loading">Loading...</h2></div>
-			<div ng-if="fluids.errorLoading"><h2 class="error">Error loading!</h2></div>
-			<div ng-if="fluids.obtained">							
+			<div ng-if="fluidInfo.loading"><h2 class="loading">Loading...</h2></div>
+			<div ng-if="fluidInfo.errorLoading"><h2 class="error">Error loading!</h2></div>
+			<div ng-if="fluidInfo.obtained">							
 				<div class="section">
 					<div class="field-label">Select a fluid:</div>
 					<div class="field-select choice">
-						<select ng-model="selectedFluid" ng-options="fluid as fluid.label for fluid in fluidList"></select>
+						<select ng-model="fluidInfo.selectedFluid" ng-options="fluid as fluid.label for fluid in fluidInfo.data"></select>
 					</div>
 				</div>
 				
 				<div class="section">
-					<div style="display: inline-block;" ng-repeat="constant in selectedFluid.constants.definitions[0].groups">
-						<div smo-field-group="constant" view-type="'output'" smo-data-source="selectedFluid.constants.values">
+					<div style="display: inline-block;" ng-repeat="constant in fluidInfo.selectedFluid.constants.definitions[0].groups">
+						<div smo-field-group="constant" view-type="'output'" smo-data-source="fluidInfo.selectedFluid.constants.values">
 						</div>
 					</div>
-				</div>
-				
+				</div>				
 				<div class="section">
 					<h1>Literature References</h1>				
-					<div ng-repeat="pair in selectedFluid.references" ng-show="pair[1]">
+					<div ng-repeat="pair in fluidInfo.selectedFluid.references" ng-show="pair[1]">
 						<span class="label-text">{{pair[0]}}:</span> {{pair[1].author}}, <span class="italic-text">{{pair[1].title}}</span>
 					</div>			
 				</div>
@@ -147,6 +195,29 @@ angular.module('FluidPropsCalculator', ['ui.bootstrap', 'smo'])
 			</div>
 		</div>
 {% endverbatim %}
-	</div>	
+		<div class="tab-pane page-container" id="saturation">
+			<h1 class="title">Saturation</h1>
+			<div ng-if="saturation.fluidList.loading"><h2 class="loading">Loading...</h2></div>
+			<div ng-if="saturation.fluidList.errorLoading"><h2 class="error">Error loading!</h2></div>
+			<div ng-if="saturation.fluidList.obtained">							
+				<div class="section">
+					<div class="field-label">Select a fluid:</div>
+					<div class="field-select choice">
+						<select ng-model="saturation.selectedFluid" ng-options="pair[0] as pair[1] for pair in saturation.fluidList.data"></select>
+					</div>
+					<div class="field-select choice" style="margin-left: 5px;">
+						<button ng-click="fetchSaturationData()">Go!</button>
+					</div>
+				</div>
+			</div>
+			<div ng-if="saturation.saturationData.loading"><h2 class="loading">Loading...</h2></div>
+			<div ng-if="saturation.saturationData.errorLoading"><h2 class="error">Error loading!</h2></div>
+			<div ng-if="saturation.saturationData.obtained">	
+				<div class="section">
+					
+				</div>
+			</div>							
+		</div>
+	</div>
 </div>
 {% endblock %}
