--- a/ThermoFluids/templates/ThermoFluids/FlowResistance.html
+++ b/ThermoFluids/templates/ThermoFluids/FlowResistance.html
@@ -13,10 +13,16 @@ angular.module('FlowResistance', ['ui.bootstrap', 'smo'])
 	}])
 	.controller('FlowResistanceController', 
 		[ '$scope', function($scope) {
- 		$scope.inputs = { autoFetch : true, dataUrl: '/ThermoFluids/FlowResistance/', action: 'getInputs'};
- 		$scope.outputs = { dataUrl: '/ThermoFluids/FlowResistance/', action: 'compute'};
+		$scope.flowResistance = {
+			inputCommunicator: new ModelCommunicator(),
+			resultsCommunicator: new ModelCommunicator()
+		};
+		$scope.flowResistance.inputCommunicator.fetchData(
+			'getFlowResistanceInputs', {});
+		
 		$scope.compute = function() {
-			$scope.outputs.fetchData($scope.inputs.data.values);
+			$scope.flowResistance.resultsCommunicator.fetchData(
+				'computeFlowResistance', $scope.flowResistance.inputCommunicator.data.values);
 		}
 		
 	}]);
@@ -36,16 +42,14 @@ angular.module('FlowResistance', ['ui.bootstrap', 'smo'])
 			<div class="title-figure">
 				<img src="{% static 'ThermoFluids/StraightPipe.svg' %}"></img>
 			</div>
-			<div class="section"> 		
-				<div ng-form name="myForm">
-					<div smo-input-view="inputs"></div>
+			<div smo-model-view="flowResistanceInputs" view-type="input" communicator="flowResistance.inputCommunicator"></div>
+			<div class="section" style="margin-left: 20px;"> 		
+				<div ng-show="flowResistance.inputCommunicator.dataReceived"><button ng-disabled="!flowResistance.inputCommunicator.fieldsValid" 
+					 class="btn btn-default" ng-click="compute()">Compute</button>
 				</div>
 			</div>
-			<div class="section" style="margin-left: 20px;">		
-				<div ng-show="inputs.inputsObtained"><button ng-disabled="!myForm.$valid" class="btn btn-default" ng-click="compute()">Compute</button></div>
-			</div>
 			<div class="section"> 
-				<div smo-output-view="outputs"></div>
+				<div smo-model-view="flowResistanceResults" view-type="output" communicator="flowResistance.resultsCommunicator"></div>
 			</div>
 		</div>
 		<div class="tab-pane" id="doc">
