--- a/ThermoFluids/templates/ThermoFluids/FreeConvection.html
+++ b/ThermoFluids/templates/ThermoFluids/FreeConvection.html
@@ -13,17 +13,28 @@ angular.module('FreeConvection', ['ui.bootstrap', 'smo'])
 	}])
 	.controller('FreeConvectionController', 
 		[ '$scope', function($scope) {
- 		$scope.inputsConvection_External = { autoFetch : true, dataUrl: '/ThermoFluids/FreeConvection/', action: 'getInputs_External'};
- 		$scope.outputsConvection_External = { dataUrl: '/ThermoFluids/FreeConvection/', action: 'compute_External'};
- 		$scope.inputsConvection_Internal = { autoFetch : true, dataUrl: '/ThermoFluids/FreeConvection/', action: 'getInputs_Internal'};
- 		$scope.outputsConvection_Internal = { dataUrl: '/ThermoFluids/FreeConvection/', action: 'compute_Internal'};
- 		
- 		$scope.compute_External = function() {
-			$scope.outputsConvection_External.fetchData($scope.inputsConvection_External.data.values);
-//	 		$scope.inputsWireHeating = { autoFetch : true, dataUrl: '/ThermoFluids/FreeConvection/', action: 'getInputs_WireSpotHeating'};
+		$scope.convectionExternal = {
+			inputCommunicator: new ModelCommunicator(),
+			resultsCommunicator: new ModelCommunicator()
+		};
+		$scope.convectionExternal.inputCommunicator.fetchData(
+			'getConvectionExternalInputs', {});
+		
+		$scope.computeExternal = function() {
+			$scope.convectionExternal.resultsCommunicator.fetchData(
+				'computeConvectionExternal', $scope.convectionExternal.inputCommunicator.data.values);
 		}
-		$scope.compute_Internal = function() {
-			$scope.outputsConvection_Internal.fetchData($scope.inputsConvection_Internal.data.values);
+		
+		$scope.convectionInternal = {
+			inputCommunicator: new ModelCommunicator(),
+			resultsCommunicator: new ModelCommunicator()
+		};
+		$scope.convectionInternal.inputCommunicator.fetchData(
+			'getConvectionInternalInputs', {});
+		
+		$scope.computeInternal = function() {
+			$scope.convectionInternal.resultsCommunicator.fetchData(
+				'computeConvectionInternal', $scope.convectionInternal.inputCommunicator.data.values);
 		}
 		
 	}]);
@@ -44,16 +55,14 @@ angular.module('FreeConvection', ['ui.bootstrap', 'smo'])
 			<div class="title-figure">
 <!-- 				<img src="{% static '' %}" type="image/svg+xml"></object> -->
 			</div>
-			<div class="section"> 		
-				<div ng-form name="externalForm">
-					<div smo-input-view="inputsConvection_External"></div>
+			<div smo-model-view="convectionExternalInputs" view-type="input" communicator="convectionExternal.inputCommunicator"></div>
+			<div class="section" style="margin-left: 20px;"> 		
+				<div ng-show="convectionExternal.inputCommunicator.dataReceived"><button ng-disabled="!convectionExternal.inputCommunicator.fieldsValid" 
+					 class="btn btn-default" ng-click="computeExternal()">Compute</button>
 				</div>
 			</div>
-			<div class="section" style="margin-left: 20px;">		
-				<div ng-show="inputsConvection_External"><button ng-disabled="!externalForm.$valid" class="btn btn-default" ng-click="compute_External()">Compute</button></div>
-			</div>
 			<div class="section"> 
-				<div smo-output-view="outputsConvection_External"></div>
+				<div smo-model-view="convectionExternalResults" view-type="output" communicator="convectionExternal.resultsCommunicator"></div>
 			</div>
 		</div>
 		<div class="tab-pane page-container" id="internal">
@@ -61,16 +70,14 @@ angular.module('FreeConvection', ['ui.bootstrap', 'smo'])
 			<div class="title-figure">
 <!-- 				<img src="{% static '' %}" type="image/svg+xml"></object> -->
 			</div>
-			<div class="section"> 		
-				<div ng-form name="internalForm">
-					<div smo-input-view="inputsConvection_Internal"></div>
+			<div smo-model-view="convectionInternalInputs" view-type="input" communicator="convectionInternal.inputCommunicator"></div>
+			<div class="section" style="margin-left: 20px;"> 		
+				<div ng-show="convectionInternal.inputCommunicator.dataReceived"><button ng-disabled="!convectionInternal.inputCommunicator.fieldsValid" 
+					 class="btn btn-default" ng-click="computeInternal()">Compute</button>
 				</div>
 			</div>
-			<div class="section" style="margin-left: 20px;">		
-				<div ng-show="inputsConvection_Internal"><button ng-disabled="!internalForm.$valid" class="btn btn-default" ng-click="compute_Internal()">Compute</button></div>
-			</div>
 			<div class="section"> 
-				<div smo-output-view="outputsConvection_Internal"></div>
+				<div smo-model-view="convectionInternalResults" view-type="output" communicator="convectionInternal.resultsCommunicator"></div>
 			</div>
 		</div>
 		<div class="tab-pane" id="doc">
