--- a/templates/Base.html
+++ b/templates/Base.html
@@ -58,6 +58,7 @@
 				        <li><a href="{% url 'ThermoFluids:HeatPump' %}">Heat pump / AC / Refrigerator</a></li>
 				        <li><a href="{% url 'ThermoFluids:FreeConvection' %}">Free convection</a></li>
 				        <li><a href="{% url 'ThermoFluids:HeatExchange1D' %}">Heat exchange (1D configurations)</a></li>
+				        <li><a href="{% url 'ThermoFluids:CryogenicInsulation' %}">Cryogenic insulation</a></li>
 <!-- 				        <li class="divider"></li> -->
 <!-- 				        <li class="dropdown-header">Nav header</li> -->
 <!-- 				        <li><a href="{% url 'ThermoFluids:testView' %}">Test View</a></li> -->
